--- a/Source_Code/MBIR_4D/Makefile
+++ b/Source_Code/MBIR_4D/Makefile
@@ -32,7 +32,8 @@
  # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 
 
 CC = mpicc #MPI compiler
-CFLAGS = -Wall -fopenmp -O3 -ansi -lm #Compiler flags. Can change the code optimization levels.
+CFLAGS = -Wall -O3 -fopenmp -ansi -lm #Compiler flags. Can change the code optimization levels.
+#CFLAGS = -g -Wall -fopenmp -ansi -lm #Compiler flags. Can change the code optimization levels.
 MACROS = -DNO_COST_CALCULATE -DNO_DEBUG #Macros
 OBJS = XT_Engine.o allocate.o randlib.o tiff.o XT_AMatrix.o XT_ForwardProject.o XT_ICD_update.o XT_Init.o XT_IOMisc.o XT_MPI.o XT_MPIIO.o XT_NHICD.o XT_Profile.o XT_VoxUpdate.o invert.o nrutil.o XT_OffsetError.o
 SRCS = XT_Engine.c allocate.c randlib.c tiff.c XT_AMatrix.c XT_ForwardProject.c XT_ICD_update.c XT_Init.c XT_IOMisc.c XT_MPI.c XT_MPIIO.c XT_NHICD.c XT_Profile.c XT_VoxUpdate.c invert.c nrutil.c XT_OffsetError.c
